<resources>
    <string name="app_name">95来呗</string>
    <string name="bartitle_one">首页</string>
    <string name="bartitle_two">发现</string>
    <string name="bartitle_three">发布</string>
    <string name="bartitle_four">关于</string>
    <string name="bartitle_five">我的</string>
    <string name="loginString">登录/注册</string>
    <string name="home">首页</string>
    <string name="phone">请输入手机号码</string>
    <string name="yanzhengma">请输入验证码</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="loginnow">立即登录</string>
    <string name="loginpw">密码登录</string>
    <string name="baiquan">呗圈</string>
    <string name="laibaiyouxuan">来呗优选</string>
    <string name="zuoyilingyong">座椅领用</string>
    <string name="gongyi">公益</string>
    <string name="xianzhi">闲置</string>
    <string name="itemtitle">最新爆款</string>
    <string name="itemtitles">奇蒂 全能者</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="youxuan">优选</string>
    <string name="tuijian">国外家庭热门玩具推荐</string>
    <string name="dianjiinter">点击进入</string>
    <string name="biqiang">必抢清单</string>
    <string name="haluo">哈罗闪三件套</string>
    <string name="jinshou">仅售</string>
    <string name="price">118</string>
    <string name="qiangdan">抢单送书包</string>
    <string name="huyan">护眼K歌早教机</string>
    <string name="price1">258</string>
    <string name="onestring">   孩子问妈妈为什么时，妈妈应该这样回答...</string>
    <string name="twostring">车尾贴壁虎，童车中的劳斯莱斯是什么感觉...</string>
    <string name="edit_hint">搜说说、商品、用户</string>
    <string name="tiantian">天天换新</string>
    <string name="shishang">时尚大牌</string>
    <string name="quanqiu">全球精选</string>
    <string name="more">更多</string>
    <string name="astring">安全坐椅免费领用</string>
    <string name="aboout">版本识别码:OT|||2c00c86e-bd06-4d1f-9325-0ae4edd00869</string>
    <string name="aboout_laibai">关于来呗</string>
    <string name="discover">发现</string>
    <string name="about_laibai_string">关于来呗： “来呗”致力于成为亲子家庭一站式需求解决平台，致力于成为全球最大的儿童安全成长服务平台，让全天下儿童安全健康成长。基本业务包括安全座椅免费租赁、公益、优选商品、母婴内容社区、二手闲置、本地生活服务等。</string>
    <string name="about_beike_string">关于贝壳： 贝壳是来呗的货币，与人民币兑换比例为10：1（10贝壳=1元），贝壳可用于购物、参与游戏、打赏等。贝壳可通过出售闲置物品、参与完成app内相关活动获得。贝壳不支持个人用户提现。</string>
    <string name="about_beiquan_string">关于呗圈： 呗圈是来呗的内容分享频道，根据用户的兴趣、年龄段等参数精准化推荐儿童成长、健康、教育、生活等信息内容，用户发布的说说均可在呗圈内体现；呗圈内不仅有普通用户，来呗也会邀请教育专家、医生、母婴达人入驻平台分享干货。</string>
    <string name="about_safezuoyi_string">关于安全座椅领用： 安全座椅免费领用为九五儿童安全座椅租赁（天津）有限公司的核心业务，来呗平台负责实现线上交易及退换货流程。用户缴纳一台座椅的押金可免费使用最多3台座椅，最长使用年限为12年的时间；用户领用成功后，押金存放在保险公司的监管账号上，生成保险单号，用户可拨打保险公司官方电话查询。</string>
    <string name="about_laibaiyouxuan_string">关于来呗优选： 来呗优选是来呗的购物频道，专注提供高品质、高安全的优质商品，来呗专属买手团队，全球采货，通过单品营销的形式，将产品的用途、属性及材料说明都做一一介绍，供用户公平公正的了解、比较、选购，坚持来呗出品必属精品的理念。</string>
    <string name="about_xianzhi_string">关于闲置： 儿童的成长过程因身体发育较快产生大量的闲置物品，既占地方又没有环保的处理方式。闲置频道为了解决这一痛点，用户自行上传商品并设置价格，实现闲置商品的流通；同时用户可设置捐赠比例，将闲置物品销售所得贝壳的一定比例捐赠至来呗平台，来呗平台将此经费用于公益项目所需的物资采购、物流运输分拣等。捐赠的货款的使用透明公开。</string>
    <string name="about_gonfyi_string">关于公益： 来呗是九五集团旗下的独立互联网平台，九五儿童安全座椅租赁（天津）有限公司隶属于九五集团，也是“关爱儿童安全基金”发起方；“专注儿童安全，守护国家未来”是该基金的理念也是九五的创业初衷。来呗将公益变为大众的公益、多数人的公益；通过和中国扶贫协会、各地慈善机构等合作，打通捐赠方和需求方的中间环节并反馈每一环节的动态，做到真正的透明公开，后期也将启动一对一精准关爱计划。</string>
    <string name="about_vip_string">关于会员： 来呗会员分为普通会员、认证商家及认证达人3种，认证需提交相关资料审核。来呗会员也可通过参与完成平台相关的活动获得勋章，增加会员权益。</string>
    <string name="about_tuihuan_string">关于退换货： 来呗优选的商品及安全座椅等均满足国家相关检测认证，遵守三包条例，发货7天后若用户不进行退换货，默认确定收货。</string>
    <string name="about_fahuo_string">发货: 用户自付款成功之日起2个工作日之内发货,特殊情况会另外说明, 用户可自行在平台上查询物流单号。</string>
    <string name="about_shouhuo_string">收货: 用户收到货后请尽快在平台上确认收货,如收到的货品出现破损、丢失、少件等情况请第一时间沟通客服解决。</string>
    <string name="about_tuihuo_string">退货: 来呗承诺顾客购买之日七天内可退货、换货，退换货要求如下:未拆包装、未使用、不影响二次销售的产品、由用户在平台上提出申请待确认后将商品退回指定退货地址,退货运费由用户垫付,来呗将补偿80个贝壳币给用户。 退货时请将商品妥善包装,并用纸写好订单号、联系人、电话,联系在线客服反馈退货单号，不支持到付。</string>
    <string name="about_enable_tuihuo_string">退货确认: 收到退货后,来呗会在3个工作日之内确认退货,并将退货金额返回用户账户,如收到的退货有任何问题客服将及时与用户沟通解决。</string>
    <string name="speak">我的说说</string>
    <string name="my_xianzhi">我的闲置</string>
    <string name="my_sale">我卖出的</string>
    <string name="my_buy">我买到的</string>
    <string name="my_zulin">我的租赁</string>
    <string name="my_zan">我赞过的</string>
    <string name="my_set">设置</string>
    <string name="my_help">帮助</string>
    <string name="setting">设置</string>
    <string name="exit">退出当前账号</string>
    <string name="my_setting">个人资料设置</string>
    <string name="reset_password">密码修改</string>
    <string name="bound_set">绑定设置</string>
    <string name="address">我的收货地址</string>
    <string name="fuwu">服务条款</string>
    <string name="helpping">帮助</string>
    <string name="lailai">客服来来</string>
    <string name="baibai">客服呗呗</string>
    <string name="phone1">服务热线</string>
    <string name="phonenum">0571-86537095</string>
    <string name="xiaoxi">消息</string>
    <string name="pinglun">评论</string>
    <string name="count">还没有收到评论哦</string>
    <string name="zan">收到的赞</string>
    <string name="others">系统提醒</string>
    <string name="others_string">暂无系统消息</string>
    <string name="zan_string">还没有收到赞哦</string>
    <string name="releasetell">发布说说</string>
    <string name="setpassword">设置密码</string>
    <string name="new_password">新密码</string>
    <string name="input_password">请输入新密码</string>
    <string name="enable_password">确认密码</string>
    <string name="input_enable_password">请确认密码</string>
    <string name="enable">确认</string>
    <string name="addtitle">添加地址</string>
    <string name="shouhuoren">收货人</string>
    <string name="input_shouhuoren">请输入收货人</string>
    <string name="phonenums">手机号</string>
    <string name="input_phonenum">请输入手机号</string>
    <string name="input_shengshiqu">请选择省市区</string>
    <string name="shengshiqu">省市区</string>
    <string name="write_address">请填写详细地址</string>
    <string name="location">定位</string>
    <string name="rent">我的租赁</string>
    <string name="shouye">首页</string>
    <string name="all">全部</string>
    <string name="weixin">微信</string>
    <string name="daizhifu">待支付</string>
    <string name="daifahuo">待发货</string>
    <string name="daishouhuo">待收货</string>
    <string name="yiwancheng">已完成</string>
    <string name="select_youhui">选择优惠券</string>
    <string name="tianjia">添加</string>
    <string name="clickshuru">点击输入优惠码</string>
    <string name="login_style">其他登录方式</string>
</resources>