<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_my_rent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.comeon95.MyRentActivity">
    <RelativeLayout
        android:id="@+id/aboutlb"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:background="@color/homeback_color"
        >
        <ImageView
            android:id="@+id/about_return"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/return_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="80dp"
            android:layout_toRightOf="@id/about_return"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/rent"
            android:textColor="@color/text_red"
            android:textSize="16sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:text="@string/shouye"/>
        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:text="@string/shouye"/>
    </RelativeLayout>
    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabSelectedTextColor="@color/red"
        app:tabIndicatorColor="@color/red">
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daizhifu"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daifahuo"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daishouhuo"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yiwancheng"/>
    </android.support.design.widget.TabLayout>
</LinearLayout>
