<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_address"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.comeon95.AddAddressActivity">
    <RelativeLayout
        android:id="@+id/reset_password"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:background="@color/homeback_color"
        >
        <ImageView
            android:id="@+id/return1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/return_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@id/return1"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/addtitle"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/enable"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/enable"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/reset_password"
        android:background="@color/homeback_color"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shouhuoren"
            android:textColor="@color/textColor"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/textSize1"/>
        <EditText
            android:id="@+id/shouhuoren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:padding="5dp"
            android:textSize="@dimen/textSize1"
            android:inputType="text"
            android:hint="@string/input_shouhuoren"/>
    </LinearLayout>
    <View
        android:id="@+id/views"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/new_password"
        android:layout_marginLeft="5dp"
        android:background="@color/button_backgroung"/>
    <LinearLayout
        android:id="@+id/phonenum"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/views"
        android:background="@color/homeback_color"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenums"
            android:textColor="@color/textColor"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/textSize1"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:textSize="@dimen/textSize1"
            android:padding="5dp"
            android:inputType="phone"
            android:hint="@string/input_phonenum"/>
    </LinearLayout>
    <View
        android:id="@+id/views1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/phonenum"
        android:layout_marginLeft="5dp"
        android:background="@color/button_backgroung"/>
    <RelativeLayout
        android:id="@+id/shengshiqu"
        android:layout_width="match_parent"
        android:layout_below="@id/views1"
        android:layout_height="50dp">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@color/homeback_color"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shengshiqu"
                android:textColor="@color/textColor"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/textSize1"/>
            <EditText
                android:id="@+id/editloc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/input_shengshiqu"
                android:textSize="@dimen/textSize1"
                android:padding="5dp"
                android:inputType="text"
                android:textColor="@color/textColor"/>
        </LinearLayout>
        <TextView
            android:id="@+id/relocation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/location"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:drawableLeft="@mipmap/location"/>
    </RelativeLayout>

    <View
        android:id="@+id/views2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/shengshiqu"
        android:layout_marginLeft="5dp"
        android:background="@color/button_backgroung"/>
    <EditText
        android:id="@+id/edit_address_specific"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/homeback_color"
        android:hint="@string/write_address"
        android:gravity="top|left"
        android:paddingLeft="5dp"
        android:textSize="@dimen/textSize1"
        android:paddingTop="8dp"
        android:layout_below="@id/views2"/>
</RelativeLayout>
