<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.comeon95.ResetPasswordActivity">
    <RelativeLayout
        android:id="@+id/reset_password"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:background="@color/homeback_color"
        >
        <ImageView
            android:id="@+id/return1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/return_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@id/return1"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/setpassword"
            android:textSize="16sp"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/reset_password"
        android:background="@color/homeback_color"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/textColor"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/textSize1"/>
        <EditText
            android:id="@+id/password1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:hint="@string/input_password"/>
    </LinearLayout>
    <View
        android:id="@+id/views"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/new_password"
        android:background="@color/button_backgroung"/>
    <LinearLayout
        android:id="@+id/enable_word"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/views"
        android:background="@color/homeback_color"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_password"
            android:textColor="@color/textColor"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/textSize1"/>
        <EditText
            android:id="@+id/password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/input_enable_password"/>
    </LinearLayout>
    <Button
        android:id="@+id/enable"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/enable_word"
        android:background="@color/text_red"
        android:textColor="@color/homeback_color"
        android:padding="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/enable"/>
</RelativeLayout>
