<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.administrator.comeon95.LoginActivity">
    <RelativeLayout
        android:id="@+id/logintoolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/homeback_color"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="8dp"
            android:src="@mipmap/fanhui"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginString"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/textColor"/>
        <TextView
            android:id="@+id/mainpager"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:text="@string/home"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/text_red1"/>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/loginll0"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:background="@color/homeback_color"
        android:layout_below="@+id/logintoolbar"
        android:orientation="vertical">
      <LinearLayout
          android:id="@+id/loginll1"
          android:layout_width="match_parent"
          android:gravity="center_vertical"
          android:layout_height="70dp">
          <ImageView
              android:layout_width="20dp"
              android:layout_height="30dp"
              android:layout_marginLeft="10dp"
              android:scaleType="fitXY"
              android:src="@mipmap/sen"
              />
          <EditText
              android:id="@+id/phonenum"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="8dp"
              android:hint="@string/phone"/>

      </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:scaleType="fitXY"
                android:src="@mipmap/lock"
                />
            <EditText
                android:id="@+id/yanzheng_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@null"
                android:hint="@string/yanzhengma"/>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/post"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:background="@drawable/login_yanzheng_shape"
        android:layout_alignParentRight="true"
        android:layout_marginTop="145dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/text_red1"
        android:text="@string/huoquyanzhengma"/>
    <Button
        android:id="@+id/loginnow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginll0"
        android:layout_marginTop="40dp"
        android:background="@color/button_backgroung"
        android:textColor="@color/homeback_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/loginnow"/>
    <TextView
        android:id="@+id/pass_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginnow"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/loginpw"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/background"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_style"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@color/background"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/wechat_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/wechat"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/weixin"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
