<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_you_hui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.comeon95.SelectYouHuiActivity">
    <RelativeLayout
        android:id="@+id/reset_password"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:background="@color/homeback_color"
        >
        <ImageView
            android:id="@+id/return1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/return_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@id/return1"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/select_youhui"
            android:textColor="@color/text_red"
            android:textSize="16sp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">
        <EditText
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:hint="@string/clickshuru"
            android:background="@drawable/item_background"
            android:textSize="13sp"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:background="@color/yello"
            android:textColor="@color/homeback_color"
            android:text="@string/tianjia"/>
    </LinearLayout>
</LinearLayout>
